--- a/app.html
+++ b/app.html
@@ -13,7 +13,7 @@ Please read the README below in the JS Editor before beginning. Feel free to del
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css.style">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
